Updated urdu font

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: "Urdu";
-  src: url("/fonts/Pak_Nastaleeq.ttf");
+  src: url("/fonts/Jameel_1.ttf");
 }
 
 .arabic-font {
